			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04j: *********************************

BUG: (4/14/06, GVG) More fixes for Bug #931. The ones introduced on 4/13/06 were not sufficient.
FIX: It loads initial DRC variables from disk if values are kept on cache. ValidVersion variable not used
for now. Later I might clean the code.

BUG: (4/14/06,DN) "fieldVariableChanged" doesn't work for Examine Jobs launched from client.
FIX: Add field to JobsTest.FakeJob. Fix EJob.serializeResult

BUG: (4/14/06, GVG) Exception from Tool->Network->ListGeometryOnNetwork (Bug #939) due to Examine job setting
fieldVariableChanged variables. This is illegal for jobs running on client.
FIX: No fieldVariableChanged set.

IMP: (4/14/06, GVG) Re-arraging debug menus. Consolidated in DevelopersMenus and moved to tests plugin.

BUG: (4/14/06, DN) Exception when zooming layout with outlined layers.
FIX: Add PixelDrawing.drawOutline() with proper clipping.

BUG: (4/13/06, GVG) ErrorLogger writing invalid characters for XML parser such as ">" and "<". This is related to
Bug #933.
FIX: Replacement of special XML characters. Extra changes: avoding crash in reading Assura if cell is null.

IMP: (4/13/06, GVG) Entering text (Bug #935). Implemented by adding a new item under EditMenu -> Text
so KeyBindings can be used.

BUG: (4/13/06, GVG) Fix for DRC redoing on already checked cells (Bug #931)
FIX: Inconsisten caching of stored dates if you switch from data on memory to data on disk.

BUG: (4/13/06, GVG) Fix for Error logger loading (Bug #933)
FIX: Inconsistent DTD header after changes in highlight.

BUG (4/13/06, DN): Exception in NetworkManager after cell deletion.
FIX: In NetworkManager.updateAll use "l" instead if "i" in "some cells deleted" loop, 

BUG (4/13/06, DN): Concurrent modification in redispaly (Bug #909, #923, #932).
FIX: PixelDrawing.forceRedraw collects changed cells in a Set.